--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,6 +4,6 @@
 
 html,
 body {
-  font-size: font-size;
+  font-size: $font-size;
   font-family: $text-font;
 }
